samples/_failures_safe/1761365006_360354_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0bb73189.c: In function ‘main’:
./samples/SAFE/__tmp_0bb73189.c:159:33: error: expected ‘)’ at end of input
  159 |     sort_word_counts(word_counts
      |                     ~           ^
      |                                 )
./samples/SAFE/__tmp_0bb73189.c:159:5: error: too few arguments to function ‘sort_word_counts’
  159 |     sort_word_counts(word_counts
      |     ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0bb73189.c:102:6: note: declared here
  102 | void sort_word_counts(struct WordCount *word_counts, int count) {
      |      ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0bb73189.c:159:5: error: expected declaration or statement at end of input
  159 |     sort_word_counts(word_counts
      |     ^~~~~~~~~~~~~~~~
